<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/reminderactivity"
    android:background="@color/bgColorMain"
    android:layout_height="match_parent"
    tools:context=".ReminderModule.ReminderActivity">
<androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>
</androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/startdate"
            android:focusable="false"
            android:id="@+id/startdate_ed"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:ems="5"/>
        <View
            android:layout_width="5sp"
            android:background="@color/colorAccent"
            android:layout_margin="10sp"
            android:layout_height="match_parent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorText"
            android:focusable="false"
            android:id="@+id/enddate_ed"
            android:textColorHint="@color/colorTextHint"
            android:layout_height="match_parent"
            android:hint="@string/enddate"
            android:ems="5"/>
        <Button
            android:layout_weight="1"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:id="@+id/query_rem_btn"
            android:background="@color/colorAccent"
            android:text="@string/apply"
            android:padding="10sp"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20sp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/sortby"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:layout_height="wrap_content"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/sortby_spinner"
            android:spinnerMode="dialog"
            android:backgroundTint="@color/colorAccent"
            android:backgroundTintMode="src_atop"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/swipeRefreshLayout"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/reminder_rv"
                android:layout_height="wrap_content"
                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addReminder_Btn"
            android:layout_margin="24sp"
            android:elevation="3sp"
            android:outlineSpotShadowColor="@color/colorText"
            android:layout_gravity="right|bottom"
            app:srcCompat="@drawable/add"
            />
    </FrameLayout>

</LinearLayout>