<resources>
    <string name="app_name">ProScheduler</string>
    <string name="show_password">Show Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="contact_support">Contact Support</string>
    <string name="login">Login</string>
    <string name="change_language">Change Language</string>
    <string name="calendarevents">Calendar/Events</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>
    <string name="profilepage" translatable="false">Profile Page</string>
    <string name="importantreminders">Today\'s Reminders</string>
    <!--    <string name="show_password">Show Password</string>-->
    <!--    <string name="show_password">Show Password</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">Reminders</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="add_edit">Create or Edit Reminders</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="checknoti">Check to Enable Notification</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="sortby">Sort By:</string>
    <string name="apply">Apply</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="events">Events</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="rememberpassword">Remember Password</string>
    <string name="enableautomaticlogin">Enable Automatic Login</string>
    <string name="changepassword">Change Password</string>
    <string name="clickhere">Click Here</string>
    <string name="checkupdates">Check for Updates</string>
    <string name="logout">Logout</string>
</resources>
